# CIS456_Game

./: .gitignore  CMakeLists.txt
Game/: CMakeLists.txt
Game/src/: CollisionSystem.cpp  Components.h  DelayedExecutor.h  DestructionNotificationSystem.h  EnemyPointsTextSystem.cpp  EnemyPointsTextSystem.h  EnemySpawningSystem.cpp  EnemySpawningSystem.h  Game.cpp  Game.h  PlayerSystem.cpp  PlayerSystem.h  Rand.h  SpriteRenderingSystem.h  main.cpp
Game2/: CMakeLists.txt
Game2/src/: CollisionSystem.cpp  CollisionSystem.h  Game.cpp  GravitySystem.h  LifetimeSystem.h  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h
Mage/: CMakeLists.txt
Mage/src/Mage/Core/: Application.cpp  Application.h  Core.h  EventEnums.h  EventListenerBase.h  EventManager.cpp  EventManager.h  Exception.cpp  Exception.h  ICopyDisable.h  Log.cpp  Window.cpp  Window.h
Mage/src/Mage/IO/: Controller.cpp  Controller.h
Mage/src/Mage/Renderer/: Camera.h  Font.cpp  Font.h  Renderer.h  Shader.cpp  Sprite.cpp  Sprite.h  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
Mage/src/Mage/Scene/: ComponentManager.cpp  ComponentManager.h  ComponentVector.h  Entity.h  EntityList.cpp  EntityList.h  EntityManager.cpp  EntityManager.h  System.cpp  System.h  SystemList.cpp  SystemList.h  SystemManager.cpp  SystemManager.h
